# CPP_Pipeline

./: BuildAndRun.bat  CMakeLists.txt  DependencyInstall.bat  Jenkinsfile  README.md  calc.cpp  conanfile.txt
.github/workflows/: cppcheck.yml
test/: calc_test.cpp
